scripts/nullness/annotator/url11fb0973cf_raichuman9_Swimmer526_tgz-pJ8-fr_inria_optimization_cmaes_examples_CMAExample1J8.txt
../annotator/url11fb0973cf_raichuman9_Swimmer526_tgz-pJ8-fr_inria_optimization_cmaes_examples_CMAExample1J8/src/org/jbox2d/collision/TimeOfImpact.java:35: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url11fb0973cf_raichuman9_Swimmer526_tgz-pJ8-fr_inria_optimization_cmaes_examples_CMAExample1J8/src/ubc/swim/tests/SliderCrankTest.java:43: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url11fb0973cf_raichuman9_Swimmer526_tgz-pJ8-fr_inria_optimization_cmaes_examples_CMAExample1J8/src/org/jbox2d/collision/TimeOfImpact.java:342: error: cannot find symbol
	@Initializer public float initialize(final SimplexCache cache, final DistanceProxy proxyA, final Sweep sweepA,
	 ^
  symbol:   class Initializer
  location: class SeparationFunction
../annotator/url11fb0973cf_raichuman9_Swimmer526_tgz-pJ8-fr_inria_optimization_cmaes_examples_CMAExample1J8/src/ubc/swim/tests/SliderCrankTest.java:57: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class SliderCrankTest
../annotator/url11fb0973cf_raichuman9_Swimmer526_tgz-pJ8-fr_inria_optimization_cmaes_examples_CMAExample1J8/src/org/jbox2d/collision/AABB.java:179: warning: [dep-ann] deprecated item is not annotated with @Deprecated
	public final boolean raycast(final RayCastOutput output, final RayCastInput input) {
	                     ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
1 warning
